change color and change side nav a little bit

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -31,7 +31,7 @@
         <ul class="nav">
           <li><a href="../index.html">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#bk-st">Reserve a room</a></li>
+          <li><a href="#bk-st">Reservation</a></li>
         </ul>
       </div>
       <!-- Ending a list -->
@@ -75,7 +75,7 @@
 
       <script>
         function openNav() {
-          document.getElementById("mySidenav").style.width = "350px";
+          document.getElementById("mySidenav").style.width = "55%";
           document.getElementById("mySidenav").style.zIndex = "3";
 
           document.getElementById("transparent-modal").classList.add("tpr-modal");
