--- a/index.html
+++ b/index.html
@@ -1,210 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Oval Rental</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oval Rental</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/responsive.css">
-</head>
-
-<body>
-  <!-- Begin main -->
-  <div id="main">
-    <!-- Begin: header -->
-    <div id="header">
-      <!--Begin: title -->
-      <div class="main-title"><a href="index.html">Oval rental</a></div>
-      <!-- End: title -->
-      <!-- Begining a list -->
-      <div id="order-list">
-        <ul class="nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="pages/reserve.html#bk-st">Reserve a room</a></li>
+  <body>
+    <!-- Begin main -->
+    <div id="main">
+      <!-- Begin: header -->
+      <div id="header">
+        <!--Begin: title -->
+        <div class="main-title"><a href="index.html">Oval rental</a></div>
+        <!-- End: title -->
+        <!-- Begining a list -->
+        <div id="order-list">
+          <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="pages/reserve.html#bk-st">Reservation</a></li>
+          </ul>
+        </div>
+        <!-- Ending a list -->
+        <!-- Begin: login and register button -->
+        <ul class="login-button">
+          <a class="nav-login" href="">
+            <li>Login</li>
+          </a>
+          <a class="nav-bracket" href="">
+            <li>|</li>
+          </a>
+          <a class="nav-register" href="">
+            <li>Register</li>
+          </a>
         </ul>
+        <!-- End: login and register button -->
       </div>
-      <!-- Ending a list -->
-      <!-- Begin: login and register button -->
-      <ul class="login-button">
-        <a class="nav-login" href="">
-          <li>
-            Login
-          </li>
-        </a>
-        <a class="nav-bracket" href="">
-          <li>
-            |
-          </li>
-        </a>
-        <a class="nav-register" href="">
-          <li>
-            Register
-          </li>
-        </a>
-      </ul>
-      <!-- End: login and register button -->
-    </div>
-    <!-- End:Header -->
+      <!-- End:Header -->
 
-    <!--Làm mờ phần dưới side-nav-->
-    <div id="transparent-modal">
-    </div>
+      <!--Làm mờ phần dưới side-nav-->
+      <div id="transparent-modal"></div>
 
-    <!-- Begin: side navigation -->
-    <div class="expand-side-nav">
-      <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="pages/reserve.html#bk-st">Reservation</a>
+      <!-- Begin: side navigation -->
+      <div class="expand-side-nav">
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <a href="index.html">Home</a>
+          <a href="#">About</a>
+          <a href="pages/reserve.html#bk-st">Reservation</a>
+        </div>
+        <span
+          class="drawer"
+          style="font-size: 30px; cursor: pointer"
+          onclick="openNav()"
+          >&#9776;
+        </span>
+
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "55%";
+            document.getElementById("mySidenav").style.zIndex = "3";
+
+            document
+              .getElementById("transparent-modal")
+              .classList.add("tpr-modal");
+          }
+
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+            document
+              .getElementById("transparent-modal")
+              .classList.remove("tpr-modal");
+          }
+        </script>
       </div>
-      <span class="drawer" style="font-size: 30px; cursor: pointer" onclick="openNav()">&#9776;
-      </span>
+      <!-- End: side navigation -->
 
-      <script>
-        function openNav() {
-          document.getElementById("mySidenav").style.width = "350px";
-          document.getElementById("mySidenav").style.zIndex = "3";
-
-          document.getElementById("transparent-modal").classList.add("tpr-modal");
-
-        }
-
-        function closeNav() {
-          document.getElementById("mySidenav").style.width = "0";
-          document.getElementById("transparent-modal").classList.remove("tpr-modal");
-        }
-      </script>
-    </div>
-    <!-- End: side navigation -->
-
-
-    <!-- Begin: banner -->
-    <div id="banner">
-      <div class="text-content">
-        <h1 class="text-heading">Discover</h1>
-        <pre class="text-subheading">
+      <!-- Begin: banner -->
+      <div id="banner">
+        <div class="text-content">
+          <h1 class="text-heading">Discover</h1>
+          <pre class="text-subheading">
 the world
 with
 Oval rental
-        </pre>
-      </div>
-    </div>
-    <!-- End: banner -->
-
-    <!-- Begin:content -->
-    <div id="content">
-      <div class="desc">
-        <div class="part-header pd32">
-          <p>Try the new experience now!</p>
+        </pre
+          >
         </div>
       </div>
+      <!-- End: banner -->
 
-      <!-- Begin: Book section -->
-      <div class="reserve">
-
-        <div class="part-header pd32">
-          <p>Our product</p>
+      <!-- Begin:content -->
+      <div id="content">
+        <div class="desc">
+          <div class="part-header pd32">
+            <p>Try the new experience now!</p>
+          </div>
         </div>
 
-        <!-- Begin: Room list -->
-        <div class="reserve-content">
-          <div class="row">
-            <!-- Room item 1 -->
-            <div class="room-item col-12 col-lg-6 pd32">
-              <img src="assets/img/Room/vipRoom.jpg" alt="Vip Room">
-              <div class="room-desc pd16">
-                <h5 class="room-desc-header">Vip Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
-                <div class="icon mgtb32">
-                  <i class="fa-solid fa-wifi"></i>
-                  <i class="fa-solid fa-tv"></i>
-                  <i class="fa-solid fa-champagne-glasses"></i>
-                  <i class="fa-solid fa-wind"></i>
+        <!-- Begin: Book section -->
+        <div class="reserve">
+          <div class="part-header pd32">
+            <p>Our product</p>
+          </div>
+
+          <!-- Begin: Room list -->
+          <div class="reserve-content">
+            <div class="row">
+              <!-- Room item 1 -->
+              <div class="room-item col-12 col-lg-6 pd32">
+                <img src="assets/img/Room/vipRoom.jpg" alt="Vip Room" />
+                <div class="room-desc pd16">
+                  <h5 class="room-desc-header">Vip Room</h5>
+                  <div class="room-desc-content">
+                    This is description. This is description. This is
+                    description. This is description.
+                  </div>
+                  <div class="icon mgtb32">
+                    <i class="fa-solid fa-wifi"></i>
+                    <i class="fa-solid fa-tv"></i>
+                    <i class="fa-solid fa-champagne-glasses"></i>
+                    <i class="fa-solid fa-wind"></i>
+                  </div>
+                  <a href="pages/reserve.html#bk-st" class="room-book pd16"
+                    >Learn more</a
+                  >
                 </div>
-                <a href="pages/reserve.html#bk-st" class="room-book pd16">Learn more</a>
+              </div>
+
+              <!-- Room item 2 -->
+              <div class="room-item col-12 col-lg-6 pd32">
+                <img src="assets/img/Room/doubleRoom.jpg" alt="Double Room" />
+                <div class="room-desc pd16">
+                  <h5 class="room-desc-header">Double Room</h5>
+                  <div class="room-desc-content">
+                    This is description. This is description. This is
+                    description. This is description.
+                  </div>
+                  <div class="icon mgtb32">
+                    <i class="fa-solid fa-wifi"></i>
+                    <i class="fa-solid fa-tv"></i>
+                    <i class="fa-solid fa-wind"></i>
+                  </div>
+                  <a href="pages/reserve.html#bk-st" class="room-book pd16"
+                    >Learn more</a
+                  >
+                </div>
               </div>
             </div>
-
-            <!-- Room item 2 -->
-            <div class="room-item col-12 col-lg-6 pd32">
-              <img src="assets/img/Room/doubleRoom.jpg" alt="Double Room">
-              <div class="room-desc pd16">
-                <h5 class="room-desc-header">Double Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
-                <div class="icon mgtb32">
-                  <i class="fa-solid fa-wifi"></i>
-                  <i class="fa-solid fa-tv"></i>
-                  <i class="fa-solid fa-wind"></i>
+            <div class="row">
+              <!-- Room item 3 -->
+              <div class="room-item col-12 col-lg-6 pd32">
+                <img src="assets/img/Room/SingleRoom.jpg" alt="Single Room" />
+                <div class="room-desc pd16">
+                  <h5 class="room-desc-header">Single Room</h5>
+                  <div class="room-desc-content">
+                    This is description. This is description. This is
+                    description. This is description.
+                  </div>
+                  <div class="icon mgtb32">
+                    <i class="fa-solid fa-wifi"></i>
+                    <i class="fa-solid fa-tv"></i>
+                    <i class="fa-solid fa-wind"></i>
+                  </div>
+                  <a href="pages/reserve.html#bk-st" class="room-book pd16"
+                    >Learn more</a
+                  >
                 </div>
-                <a href="pages/reserve.html#bk-st" class="room-book pd16">Learn more</a>
+              </div>
+
+              <!-- Room item 4 -->
+              <div class="room-item col-12 col-lg-6 pd32">
+                <img
+                  src="assets/img/Room/affordableRoom.jpg"
+                  alt="Affordable Room"
+                />
+                <div class="room-desc pd16">
+                  <h5 class="room-desc-header">Affordable Room</h5>
+                  <div class="room-desc-content">
+                    This is description. This is description. This is
+                    description. This is description.
+                  </div>
+                  <div class="icon mgtb32">
+                    <i class="fa-solid fa-wifi"></i>
+                    <i class="fa-solid fa-tv"></i>
+                    <i class="fa-solid fa-wind"></i>
+                  </div>
+                  <a href="pages/reserve.html#bk-st" class="room-book pd16"
+                    >Learn more</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <!-- Room item 3 -->
-            <div class="room-item col-12 col-lg-6 pd32">
-              <img src="assets/img/Room/SingleRoom.jpg" alt="Single Room">
-              <div class="room-desc pd16">
-                <h5 class="room-desc-header">Single Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
-                <div class="icon mgtb32">
-                  <i class="fa-solid fa-wifi"></i>
-                  <i class="fa-solid fa-tv"></i>
-                  <i class="fa-solid fa-wind"></i>
-                </div>
-                <a href="pages/reserve.html#bk-st" class="room-book pd16">Learn more</a>
-              </div>
-            </div>
+          <!-- End: Room list -->
+        </div>
+        <!-- End: Book section -->
 
-            <!-- Room item 4 -->
-            <div class="room-item col-12 col-lg-6 pd32">
-              <img src="assets/img/Room/affordableRoom.jpg" alt="Affordable Room">
-              <div class="room-desc pd16">
-                <h5 class="room-desc-header">Affordable Room</h5>
-                <div class="room-desc-content">This is description. This is description. This is description. This is
-                  description.</div>
-                <div class="icon mgtb32">
-                  <i class="fa-solid fa-wifi"></i>
-                  <i class="fa-solid fa-tv"></i>
-                  <i class="fa-solid fa-wind"></i>
-                </div>
-                <a href="pages/reserve.html#bk-st" class="room-book pd16">Learn more</a>
-              </div>
-            </div>
-
+        <div class="about-us">
+          <div class="part-header pd32">
+            <p>About us</p>
           </div>
         </div>
-        <!-- End: Room list -->
       </div>
-      <!-- End: Book section -->
+      <!-- End:content -->
 
-      <div class="about-us">
-        <div class="part-header pd32">
-          <p>About us</p>
-        </div>
-      </div>
+      <div id="footer"></div>
     </div>
-    <!-- End:content -->
-
-    <div id="footer">
-    </div>
-
-  </div>
-  <!-- End: main -->
-</body>
-
+    <!-- End: main -->
+  </body>
 </html>
