--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/footer.css">
   </head>
 
   <body>
@@ -255,8 +257,106 @@ Oval rental
       </div>
       <!-- End:content -->
 
-      <div id="footer"></div>
-    </div>
+      <div id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col ">
+              <div class = "container-about-logo">
+              <a href="#">
+                <img src="/Project_LTWeb/assets/img/logo/logo1.webp" alt="logo" class="img-logo">
+                <p >Oval Rental</p>
+              </a>
+              </div>
+              <div class = "container-about-text" >
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Vivamus quis vu lputate eros, iaculis consequat nisl. 
+                  Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
+              </div>
+              <div class="social-list">
+                <a href="#"><i class="bi bi-pinterest"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-globe2"></i></a>
+                <a href="#"><i class="bi bi-github"></i></a>
+              </div>
+            </div>
+            <div class="col">
+              <h2>Blog Posts</h2>
+                <div class="container-blog">
+                  <img src="/Oval-Rental-main/assets/img/Room/affordableRoom.jpg" alt="">
+                  <div class="container-blog-item">
+                    <h4>Travel with us this year</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
+                <div class ="container-blog">
+                  <img src="/Oval-Rental-main/assets/img/Room/doubleRoom.jpg" alt="">
+                  <div class="container-blog-item">
+                    <h4>New destinations for you</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
+                <div class ="container-blog">
+                  <img src="/Oval-Rental-main/assets/img/Room/SingleRoom.jpg" alt="">
+                  <div class="container-blog-item">
+                    <h4>Travel with us this year</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+              <h2>Tags</h2>
+              <div class="container-tag">
+                <ul>
+                  <li>
+                    <a href="#">design</a>
+                  </li>
+                  <li>
+                    <a href="#">fashion</a>
+                  </li>
+                  <li>
+                    <a href="#">music</a>
+                  </li>
+                  <li>
+                    <a href="#">video</a>
+                  </li>
+                  <li>
+                    <a href="#">party</a>
+                  </li>
+                  <li>
+                    <a href="#">photography</a>
+                  </li>
+                  <li>
+                    <a href="#">adventure</a>
+                  </li>
+                  <li>
+                    <a href="#">travel</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col">
+              <h2> CONTACT INFO </h2>
+              <div class="container-contact-info">
+                <i class="bi bi-hospital"></i>
+                <span> 175 Tây Sơn Đống Đa Hà Nội </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-telephone"></i>
+                <span> 0828807783 </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-envelope"></i>
+                <span> phamkhanhlong.nb35@gmail.com </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-google"></i>
+                <span>www.google.com.vn</span>
+              </div>
+            </div>
+          </div>
+      </div>
+  
     <!-- End: main -->
   </body>
 </html>
