up footer responsive

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ Oval rental
       <div id="footer">
         <div class="container">
           <div class="row">
-            <div class="col ">
-              <div class = "container-about-logo">
+            <div class="col col-sm-6 col-lg-3">
+              <div class = "container-about-logo ">
               <a href="#">
                 <img src="/Oval-Rental/assets/img/Logo/logo1.webp" alt="logo" class="img-logo">
                 <p >Oval Rental</p>
@@ -280,7 +280,7 @@ Oval rental
                 <a href="#"><i class="bi bi-github"></i></a>
               </div>
             </div>
-            <div class="col">
+            <div class="col col-sm-6 col-lg-3">
               <h2>Blog Posts</h2>
                 <div class="container-blog">
                   <img src="/Oval-Rental-main/assets/img/Room/affordableRoom.jpg" alt="">
@@ -304,7 +304,7 @@ Oval rental
                   </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col col-sm-6 col-lg-3">
               <h2>Tags</h2>
               <div class="container-tag">
                 <ul>
@@ -335,7 +335,7 @@ Oval rental
                 </ul>
               </div>
             </div>
-            <div class="col">
+            <div class="col col-sm-6 col-lg-3">
               <h2> CONTACT INFO </h2>
               <div class="container-contact-info">
                 <i class="bi bi-hospital"></i>
