--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Oval rental
             <div class="col col-sm-6 col-lg-3">
               <div class = "container-about-logo ">
               <a href="#">
-                <img src="/Oval-Rental/assets/img/Logo/logo1.webp" alt="logo" class="img-logo">
+                <img src="assets/img/Logo/logo1.webp" alt="logo" class="img-logo">
                 <p >Oval Rental</p>
               </a>
               </div>
@@ -283,21 +283,21 @@ Oval rental
             <div class="col col-sm-6 col-lg-3">
               <h2>Blog Posts</h2>
                 <div class="container-blog">
-                  <img src="/Oval-Rental/assets/img/Room/affordableRoom.jpg" alt="">
+                  <img src="assets/img/Room/affordableRoom.jpg" alt="">
                   <div class="container-blog-item">
                     <h4>Travel with us this year</h4>
                     <p>July 20, 2021</p>
                   </div>
                 </div>
                 <div class ="container-blog">
-                  <img src="/Oval-Rental/assets/img/Room/doubleRoom.jpg" alt="">
+                  <img src="assets/img/Room/doubleRoom.jpg" alt="">
                   <div class="container-blog-item">
                     <h4>New destinations for you</h4>
                     <p>July 20, 2021</p>
                   </div>
                 </div>
                 <div class ="container-blog">
-                  <img src="/Oval-Rental/assets/img/Room/SingleRoom.jpg" alt="">
+                  <img src="assets/img/Room/SingleRoom.jpg" alt="">
                   <div class="container-blog-item">
                     <h4>Travel with us this year</h4>
                     <p>July 20, 2021</p>
