--- a/index.html
+++ b/index.html
@@ -252,11 +252,59 @@ Oval rental
         <div class="about-us">
           <div class="part-header pd32">
             <p>About us</p>
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <div class = "container-about-us-item">
+                    <img src="assets/img/Room/vipRoom.jpg" alt="">
+                    <div class = "container-about-us-content">
+                      <div class="container-text ">
+                        <span>" The best room ever "</span>
+                        <p>Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class = "container-about-us-item">
+                    <img src="assets/img/Room/SingleRoom.jpg" alt="">
+                    <div class = "container-about-us-content">
+                      <div class="container-text ">
+                        <span>" The best room ever "</span>
+                        <p>Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="container-about-us-item">
+                    <img src="assets/img/Room/doubleRoom.jpg" alt="">
+                    <div class = "container-about-us-content">
+                      <div class="container-text ">
+                        <span>" The best room ever "</span>
+                        <p>Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <!-- End:content -->
-
+      <p class="embedded-map">
+        <iframe
+          class="map-frame"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </p>
       <div id="footer">
         <div class="container">
           <div class="row">
